force-app/main/default/objects/Training_Event__c/Training_Event__c.object-meta.xml
<CustomObject>
    <label>Training Event</label>
    <nameField>
        <label>Training Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>