force-app/main/default/objects/Training_Event__c/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <formula>End_User_Company__r.Account_Manager__r.FirstName + &quot; &quot; +  End_User_Company__r.Account_Manager__r.LastName</formula>
    <label>Account Manager</label>
    <type>Text</type>
</CustomField>