force-app/main/default/objects/Training_Event__c/fields/Air_Travel_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Air_Travel_Requirements__c</fullName>
    <inlineHelpText>These are the requirements we must follow when booking a flight in order for Prosci to be reimbursed in full.</inlineHelpText>
    <label>Air Travel Requirements</label>
    <type>TextArea</type>
</CustomField>