force-app/main/default/objects/Training_Event__c/fields/Airport_19__c.field-meta.xml
<CustomField>
    <fullName>Airport_19__c</fullName>
    <description>Indicates the preferred airport</description>
    <inlineHelpText>Indicates the preferred airport</inlineHelpText>
    <label>Airport</label>
    <type>TextArea</type>
</CustomField>