force-app/main/default/objects/Training_Event__c/fields/Airport__c.field-meta.xml
<CustomField>
    <fullName>Airport__c</fullName>
    <formula>End_User_Company__r.Airport__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Airport OBS</label>
    <type>Text</type>
</CustomField>