force-app/main/default/objects/Training_Event__c/fields/ANZ_18_Digit_ID_Training_Event_Campaign__c.field-meta.xml
<CustomField>
    <fullName>ANZ_18_Digit_ID_Training_Event_Campaign__c</fullName>
    <description>Stores the matching ANZ 18 Digit ID for their Campaign</description>
    <label>ANZ 18 Digit ID Training Event/Campaign</label>
    <length>18</length>
    <type>Text</type>
</CustomField>