force-app/main/default/objects/Training_Event__c/fields/Assigned_Training_Manager__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Training_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Training Success Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Training_Events1</relationshipName>
    <type>Lookup</type>
</CustomField>