force-app/main/default/objects/Training_Event__c/fields/Assigned_Training_Manager_noTMneeded__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Training_Manager_noTMneeded__c</fullName>
    <label>Assigned Training Manager</label>
    <length>75</length>
    <type>Text</type>
</CustomField>