force-app/main/default/objects/Training_Event__c/fields/Audit_Coach__c.field-meta.xml
<CustomField>
    <fullName>Audit_Coach__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Audit Coach/Program Advisor/Coach 3</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Training Events (Audit Coach)</relationshipLabel>
    <relationshipName>Training_Events6</relationshipName>
    <type>Lookup</type>
</CustomField>