force-app/main/default/objects/Training_Event__c/fields/Auto_Rental_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Auto_Rental_Requirements__c</fullName>
    <inlineHelpText>These are the requirements we must follow when renting a vehicle in order for Prosci to be reimbursed in full</inlineHelpText>
    <label>Auto Rental Requirements</label>
    <type>TextArea</type>
</CustomField>