force-app/main/default/objects/Training_Event__c/fields/Back_up_Instructor__c.field-meta.xml
<CustomField>
    <fullName>Back_up_Instructor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Back-up Instructor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Training_Events7</relationshipName>
    <type>Lookup</type>
</CustomField>