force-app/main/default/objects/Training_Event__c/fields/Benefits_and_outcomes__c.field-meta.xml
<CustomField>
    <fullName>Benefits_and_outcomes__c</fullName>
    <label>Benefits and outcomes</label>
    <length>5</length>
    <type>Text</type>
</CustomField>