force-app/main/default/objects/Training_Event__c/fields/Break_Even_Date__c.field-meta.xml
<CustomField>
    <fullName>Break_Even_Date__c</fullName>
    <description>Date in which the number of registrations(count of registered or scheduled to attend ATC) reached the breakeven point of 8</description>
    <inlineHelpText>Date in which the number of registrations(count of registered or scheduled to attend ATC) reached the breakeven point of 8</inlineHelpText>
    <label>Break Even Date</label>
    <type>Date</type>
</CustomField>