force-app/main/default/objects/Training_Event__c/fields/Breakfasts_19__c.field-meta.xml
<CustomField>
    <fullName>Breakfasts_19__c</fullName>
    <label>Breakfasts</label>
    <type>TextArea</type>
</CustomField>