force-app/main/default/objects/Training_Event__c/fields/Breakfasts__c.field-meta.xml
<CustomField>
    <fullName>Breakfasts__c</fullName>
    <formula>End_User_Company__r.Breakfasts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Breakfasts OBS</label>
    <type>Text</type>
</CustomField>