force-app/main/default/objects/Training_Event__c/fields/Breakout_Rooms_19__c.field-meta.xml
<CustomField>
    <fullName>Breakout_Rooms_19__c</fullName>
    <label>Breakout Rooms</label>
    <type>TextArea</type>
</CustomField>