force-app/main/default/objects/Training_Event__c/fields/Breakout_Rooms__c.field-meta.xml
<CustomField>
    <fullName>Breakout_Rooms__c</fullName>
    <formula>End_User_Company__r.Breakout_Rooms__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Breakout Rooms OBS</label>
    <type>Text</type>
</CustomField>