force-app/main/default/objects/Training_Event__c/fields/CEU_Sign_Up_Link__c.field-meta.xml
<CustomField>
    <fullName>CEU_Sign_Up_Link__c</fullName>
    <description>This is a link to the CEU sign-up offering for Public Programs taught in the USA</description>
    <label>CEU Sign-Up Link</label>
    <length>125</length>
    <type>Text</type>
</CustomField>