force-app/main/default/objects/Training_Event__c/fields/Client_Main_Contact__c.field-meta.xml
<CustomField>
    <fullName>Client_Main_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the contact that requested the Training Event</description>
    <inlineHelpText>This is the contact that requested the Training Event</inlineHelpText>
    <label>Client Main Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Training Events (Client Main Contact)</relationshipLabel>
    <relationshipName>Training_Events7</relationshipName>
    <type>Lookup</type>
</CustomField>