force-app/main/default/objects/Training_Event__c/fields/Client_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Client_Preferences__c</fullName>
    <formula>End_User_Company__r.Client_Preferences__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Preferences</label>
    <type>Text</type>
</CustomField>