force-app/main/default/objects/Training_Event__c/fields/Client_start_up_call__c.field-meta.xml
<CustomField>
    <fullName>Client_start_up_call__c</fullName>
    <label>Client start up call</label>
    <type>Date</type>
</CustomField>