force-app/main/default/objects/Training_Event__c/fields/Co_teach_Instructor__c.field-meta.xml
<CustomField>
    <fullName>Co_teach_Instructor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-teach Instructor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Training Events (Co-teach Instructor)</relationshipLabel>
    <relationshipName>Training_Events2fLi</relationshipName>
    <type>Lookup</type>
</CustomField>