force-app/main/default/objects/Training_Event__c/fields/Co_teach_Instructor_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Co_teach_Instructor_Compensation__c</fullName>
    <label>Co-teach Instructor Compensation</label>
    <length>15</length>
    <type>Text</type>
</CustomField>