force-app/main/default/objects/Training_Event__c/fields/Co_Teach_Instructor_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Co_Teach_Instructor_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-Teach Instructor(Lookup)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Training_Events6</relationshipName>
    <type>Lookup</type>
</CustomField>