force-app/main/default/objects/Training_Event__c/fields/Coach_2_Booking_Form__c.field-meta.xml
<CustomField>
    <fullName>Coach_2_Booking_Form__c</fullName>
    <label>Coach 2 Booking Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Form Drafted</fullName>
            </value>
            <value>
                <fullName>VE Approved</fullName>
            </value>
            <value>
                <fullName>Form Sent</fullName>
            </value>
            <value>
                <fullName>Form Signed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>