force-app/main/default/objects/Training_Event__c/fields/Compensation_1__c.field-meta.xml
<CustomField>
    <fullName>Compensation_1__c</fullName>
    <label>Compensation 1</label>
    <length>30</length>
    <type>Text</type>
</CustomField>