force-app/main/default/objects/Training_Event__c/fields/Compensation_2__c.field-meta.xml
<CustomField>
    <fullName>Compensation_2__c</fullName>
    <label>Compensation 2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>