force-app/main/default/objects/Training_Event__c/fields/Compensation_3__c.field-meta.xml
<CustomField>
    <fullName>Compensation_3__c</fullName>
    <label>Compensation 3</label>
    <length>30</length>
    <type>Text</type>
</CustomField>