force-app/main/default/objects/Training_Event__c/fields/Compensation__c.field-meta.xml
<CustomField>
    <fullName>Compensation__c</fullName>
    <label>Compensation</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>