force-app/main/default/objects/Training_Event__c/fields/Compensation_Back_up_Instructor__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Back_up_Instructor__c</fullName>
    <label>Compensation Back-up Instructor</label>
    <type>TextArea</type>
</CustomField>