force-app/main/default/objects/Training_Event__c/fields/Compensation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Notes__c</fullName>
    <description>This field was created to capture special instructions for Compensation to the instructor.</description>
    <label>Compensation Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>