force-app/main/default/objects/Training_Event__c/fields/Consulting_Project_Title__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Project_Title__c</fullName>
    <description>Used to track the name of the Project we are there to consult for.</description>
    <label>Consulting Project Title</label>
    <type>TextArea</type>
</CustomField>