force-app/main/default/objects/Training_Event__c/fields/Consulting_Resource_Type_1__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Resource_Type_1__c</fullName>
    <label>Consulting Resource Type 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sr. Change Advisor</fullName>
            </value>
            <value>
                <fullName>Change Advisor</fullName>
            </value>
            <value>
                <fullName>Engagement Leader</fullName>
            </value>
            <value>
                <fullName>Master Instructor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>