force-app/main/default/objects/Training_Event__c/fields/Contract_type__c.field-meta.xml
<CustomField>
    <fullName>Contract_type__c</fullName>
    <label>Contract type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contract_Type</valueSetName>
    </valueSet>
</CustomField>