force-app/main/default/objects/Training_Event__c/fields/Contracted_rooming_notes__c.field-meta.xml
<CustomField>
    <fullName>Contracted_rooming_notes__c</fullName>
    <label>Contracted rooming notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>