force-app/main/default/objects/Training_Event__c/fields/Contracts_Invoices_Notes__c.field-meta.xml
<CustomField>
    <fullName>Contracts_Invoices_Notes__c</fullName>
    <label>Contracts &amp; Invoices Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>