force-app/main/default/objects/Training_Event__c/fields/Cost_of_Training__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Training__c</fullName>
    <label>Cost of Training</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>