force-app/main/default/objects/Training_Event__c/fields/Create_Customer_Products__c.field-meta.xml
<CustomField>
    <fullName>Create_Customer_Products__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Customer Products</label>
    <type>Checkbox</type>
</CustomField>