force-app/main/default/objects/Training_Event__c/fields/Create_Material_Invoice_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Create_Material_Invoice_Opportunity__c</fullName>
    <inlineHelpText>Must have an Onsite Contact filled in.  Opportunity will be assigned to the onsite contact.</inlineHelpText>
    <label>Create Material/Invoice Opportunity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>