force-app/main/default/objects/Training_Event__c/fields/DAR_Presentation_Elements__c.field-meta.xml
<CustomField>
    <fullName>DAR_Presentation_Elements__c</fullName>
    <label>DAR Presentation Elements</label>
    <length>5</length>
    <type>Text</type>
</CustomField>