force-app/main/default/objects/Training_Event__c/fields/Date_Contract_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Contract_Sent__c</fullName>
    <label>Date Contract Sent</label>
    <type>Date</type>
</CustomField>