force-app/main/default/objects/Training_Event__c/fields/Date_Notes__c.field-meta.xml
<CustomField>
    <fullName>Date_Notes__c</fullName>
    <label>Date Notes</label>
    <type>TextArea</type>
</CustomField>