force-app/main/default/objects/Training_Event__c/fields/Day_2_Start_and_Finish_times__c.field-meta.xml
<CustomField>
    <fullName>Day_2_Start_and_Finish_times__c</fullName>
    <label>Day 2 Start and Finish times</label>
    <type>TextArea</type>
</CustomField>