force-app/main/default/objects/Training_Event__c/fields/Deal_Support_Process__c.field-meta.xml
<CustomField>
    <fullName>Deal_Support_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal Support Process</label>
    <referenceTo>Deal_Support_Process__c</referenceTo>
    <relationshipLabel>Training Events</relationshipLabel>
    <relationshipName>Training_Events</relationshipName>
    <type>Lookup</type>
</CustomField>