force-app/main/default/objects/Training_Event__c/fields/Dinners_19__c.field-meta.xml
<CustomField>
    <fullName>Dinners_19__c</fullName>
    <label>Dinners</label>
    <type>TextArea</type>
</CustomField>