force-app/main/default/objects/Training_Event__c/fields/Dinners__c.field-meta.xml
<CustomField>
    <fullName>Dinners__c</fullName>
    <formula>End_User_Company__r.Dinners__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dinners OBS</label>
    <type>Text</type>
</CustomField>