force-app/main/default/objects/Training_Event__c/fields/End_Date_Time_iCal__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Time_iCal__c</fullName>
    <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Text(DATETIMEVALUE( end_D_T__c  )), &quot;:&quot;, &quot;&quot;) ,&quot;-&quot;,&quot;&quot;),&quot; &quot;,&quot;T&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date/Time iCal</label>
    <type>Text</type>
</CustomField>