force-app/main/default/objects/Training_Event__c/fields/End_User_Company__c.field-meta.xml
<CustomField>
    <fullName>End_User_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the company that is receiving the training.</inlineHelpText>
    <label>End User Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Training Events</relationshipLabel>
    <relationshipName>Training_Events1</relationshipName>
    <type>Lookup</type>
</CustomField>