force-app/main/default/objects/Training_Event__c/fields/Engagement_Leader__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Leader__c</fullName>
    <formula>End_User_Company__r.Engagement_Leader__r.FirstName + &quot; &quot; +  End_User_Company__r.Engagement_Leader__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engagement Leader</label>
    <type>Text</type>
</CustomField>