force-app/main/default/objects/Training_Event__c/fields/Event_Order_Signed__c.field-meta.xml
<CustomField>
    <fullName>Event_Order_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Event Order Signed</label>
    <type>Checkbox</type>
</CustomField>