force-app/main/default/objects/Training_Event__c/fields/Exceptional_feedback__c.field-meta.xml
<CustomField>
    <fullName>Exceptional_feedback__c</fullName>
    <label>Exceptional feedback</label>
    <length>5</length>
    <type>Text</type>
</CustomField>