force-app/main/default/objects/Training_Event__c/fields/Facilitator_Sponsor_call_meeting__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_Sponsor_call_meeting__c</fullName>
    <label>Facilitator - Sponsor/call meeting</label>
    <type>Date</type>
</CustomField>