force-app/main/default/objects/Training_Event__c/fields/Feedback_summary_report__c.field-meta.xml
<CustomField>
    <fullName>Feedback_summary_report__c</fullName>
    <label>Feedback summary report</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>