force-app/main/default/objects/Training_Event__c/fields/Feedback_Survey_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Survey_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to supress the automated feedback survey from sending to the entire program.</description>
    <inlineHelpText>Check this box to prevent the automated feedback email from sending.</inlineHelpText>
    <label>Feedback Survey Opt-Out</label>
    <type>Checkbox</type>
</CustomField>