force-app/main/default/objects/Training_Event__c/fields/Google_Calendar_Link__c.field-meta.xml
<CustomField>
    <fullName>Google_Calendar_Link__c</fullName>
    <formula>&quot;https://www.google.com/calendar/render?action=TEMPLATE&amp;text=Prosci%20Training&amp;details=We%20look%20forward%20to%20your%20participation%20in%20Prosci&apos;s%20virtual%20instructor-led%20Program!%20Please%20reference%20the%20welcome%20letter%20that%20was%20sent%20on%20the%20day%20you%20registered%20for%20program%20details%20and%20any%20prework%20that%20may%20be%20required%20for%20your%20program.&amp;locattion=Zoom%20Link%20to%20be%20sent%20via%20email%20the%20week%20before%20your%20program&amp;dates=&quot;&amp;Start_Date_Time_iCal__c &amp;&quot;/&quot;&amp;End_Date_Time_iCal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Google Calendar Link</label>
    <type>Text</type>
</CustomField>