force-app/main/default/objects/Training_Event__c/fields/Ground_Transportation_19__c.field-meta.xml
<CustomField>
    <fullName>Ground_Transportation_19__c</fullName>
    <description>Use to indicate the preferred method of transportation</description>
    <inlineHelpText>Use to indicate the preferred method of transportation</inlineHelpText>
    <label>Ground Transportation</label>
    <type>TextArea</type>
</CustomField>