force-app/main/default/objects/Training_Event__c/fields/Ground_Transportation__c.field-meta.xml
<CustomField>
    <fullName>Ground_Transportation__c</fullName>
    <formula>End_User_Company__r.Ground_Transportation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ground Transportation OBS</label>
    <type>Text</type>
</CustomField>