force-app/main/default/objects/Training_Event__c/fields/Hotel_19__c.field-meta.xml
<CustomField>
    <fullName>Hotel_19__c</fullName>
    <description>Use to indicate the preferred hotels</description>
    <inlineHelpText>Use to indicate the preferred hotels</inlineHelpText>
    <label>Hotel</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>