force-app/main/default/objects/Training_Event__c/fields/Hotel__c.field-meta.xml
<CustomField>
    <fullName>Hotel__c</fullName>
    <formula>End_User_Company__r.Hotel__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hotel OBS</label>
    <type>Text</type>
</CustomField>