force-app/main/default/objects/Training_Event__c/fields/Individual_Materials_Not_Needed__c.field-meta.xml
<CustomField>
    <fullName>Individual_Materials_Not_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please check this box if you DO NOT need individual material opportunities created for each associated training contact.</inlineHelpText>
    <label>Individual Materials Not Needed</label>
    <type>Checkbox</type>
</CustomField>