force-app/main/default/objects/Training_Event__c/fields/Instructor_2__c.field-meta.xml
<CustomField>
    <fullName>Instructor_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instructor 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Training Events (Instructor 2)</relationshipLabel>
    <relationshipName>Training_Events9</relationshipName>
    <type>Lookup</type>
</CustomField>