force-app/main/default/objects/Training_Event__c/fields/Instructor__c.field-meta.xml
<CustomField>
    <fullName>Instructor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instructor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Training Events</relationshipLabel>
    <relationshipName>Training_Events</relationshipName>
    <type>Lookup</type>
</CustomField>