force-app/main/default/objects/Training_Event__c/fields/Instructor_Biography__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Biography__c</fullName>
    <description>URL to hubspot biorgraphy</description>
    <inlineHelpText>URL to hubspot biorgraphy</inlineHelpText>
    <label>Instructor Biography</label>
    <type>Url</type>
</CustomField>