force-app/main/default/objects/Training_Event__c/fields/Instructor_Email__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Email__c</fullName>
    <formula>Instructor__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instructor Email</label>
    <type>Text</type>
</CustomField>